[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Josh Holloway <josh.holloway@me.com>"]
edition = "2018"

[lib]
path="src/lib.rs"

[[bin]]
name="zero2prod"
path="src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "=4.0.0-beta.5"
# pin various actix-* dependencies to avoid bad beta builds
actix-service = "=2.0.0-beta.5"
config = "0.11.0"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"

# We need the optional`derive`feature to use`serde`'s procedural macros:
#`#[derive(Serialize)]`and`#[derive(Deserialize)]`.
# The feature is not enabled by default to avoid pulling in
# unnecessary dependencies for projects that do not need it.
serde = { version = "1", features = ["derive"]}

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"
